删除the-brain文件夹

--- a/TheBrain_Pre/TheBrain.csproj
+++ b/TheBrain_Pre/TheBrain.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncDelegateDemo.cs" />
+    <Compile Include="AsyncTcpClient.cs" />
     <Compile Include="AsyncTcpServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
